--- a/demo/babelrc/index.html
+++ b/demo/babelrc/index.html
@@ -1,19 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta http-equiv="expires" content="0" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta http-equiv="expires" content="0">
+    <title>My Demo</title>
+  </head>
 
-  <title>My Demo</title>
-</head>
-
-<body>
-
-  <h1>Static content in index.html is preserved</h1>
-
-  <script type="module" src="./app.js"></script>
-</body>
-
+  <body>
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
