Create a separate helpers bundle

--- a/demo/js/index.html
+++ b/demo/js/index.html
@@ -18,19 +18,30 @@
     <script type="module">
       import './demo-app.js';
 
+      function waitForTest(test) {
+        return new Promise(resolve => {
+          setTimeout(() => {
+            resolve(false);
+          }, 1000);
+          test.then(resolve);
+        });
+      }
+
       (async () => {
         window.__tests = {
           partialCSS: window.__partialCSS || false,
-          litElement: (await window.__litElement) || false,
+          litElement: await waitForTest(window.__litElement),
           startsWith: window.__startsWith || false,
           map: window.__map || false,
           importMeta: window.__importMeta || false,
           importMeta2: window.__importMeta2 || false,
-          asyncFunction: (await window.__asyncFunction) || false,
+          asyncFunction: await waitForTest(window.__asyncFunction),
           forOf: window.__forOf || false,
           optionalChaining: window.__optionalChaining || false,
           nullishCoalescing: window.__nullishCoalescing || false,
+          asyncIterator: await waitForTest(window.__asyncIterator),
         };
+
         document.getElementById('test').innerHTML = `<pre>${JSON.stringify(
           window.__tests,
           null,
